updated polyfills.ts, added method to avoid zooming that distorted the bg in IE, changed title

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
+html, body {
+  margin: 0;
+  min-height: 100%;
+}
+
 body {
-  background-image: url(assets/img/arkhd.jpg);
+  background: url(assets/img/arkhd.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  background-repeat: no-repeat;
-  color: white;
 }
 
 .overlay {
-  color:white;
-  background-color: rgba(0, 0, 0, 0.8);
   position: absolute;
   top: 0;
   left: 0;
-  bottom: 0;
-  right: 0;
+  height: 100%;
+  width: 100%;
+  color: white;
+  background-color: rgba(0,0,0,0.8);
 }
